--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-node-assist",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "assistance tool of react native",
   "homepage": "https://github.com/pefish/react-native-assist",
   "bugs": "https://github.com/pefish/react-native-assist/issues",
@@ -15,6 +15,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "buffer": "^5.2.1"
+    "buffer": "^5.2.1",
+    "node-assist": "^0.4.2"
   }
 }
